--- a/Depo/Depo/App/Resources/ru.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "Для показа ваших фотогр
 NSPhotoLibraryUsageDescription = "Для показа ваших фотографий и видео в приложении и их резервного копирования Lifebox необходим доступ к вашей библиотеке фотографий.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Ваше местоположение будет использоваться для фоновой синхронизации, а также для организации и поиска ваших фотографий.";
 NSCameraUsageDescription = "Чтобы делать снимки с помощью камеры и выполнять их резервное копирование в lifebox, необходимо разрешение на доступ к камере";
-NSContactsUsageDescription = "lifebox необходим доступ и загрузка ваших контактов на серверы lifebox для резервного копирования и управления ими.";
+NSContactsUsageDescription = "Разрешить lifebox на доступ к вашим контактам в телефонной книге, для предложений и советов, а также для функции резервного копирования контактов, загрузки их на серверы lifebox и управления ими, во время публикаций файлов общего доступа.";
 NSLocationWhenInUseUsageDescription = "Ваше местоположение будет использоваться для фоновой синхронизации, а также для организации и поиска ваших фотографий.";
