--- a/Depo/Depo/App/Resources/ar.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "لإظهار صورك ومقاطع الفي
 NSPhotoLibraryUsageDescription = "لإظهار صورك ومقاطع الفيديو الخاصة بك في التطبيق وللنسخ الاحتياطي لها ، يحتاج lifebox إلى الوصول إلى مكتبة الصور الخاصة بك.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "سيتم استخدام موقعك لمزامنة الخلفية وللتنظيم والبحث في صورك.";
 NSCameraUsageDescription = "لالتقاط الصور بالكاميرا ولنسخها احتياطيًا إلى صندوق الإنقاذ ، يلزم الحصول على إذن بالوصول إلى الكاميرا";
-NSContactsUsageDescription = "يحتاج lifebox إلى الوصول وتحميل جهات الاتصال الخاصة بك إلى خوادم lifebox للنسخ الاحتياطي وإدارتها.";
+NSContactsUsageDescription = "أعطي إذن إلى لايف بوكس lifeboxمن أجل القدرة على النسخ الإحتياطي و إدارة الدليل بإصدارات لايف بوكس lifebox ومن أجل التمكن من مشاهدة توصيات الدليل أثناء مشاركة الملف.";
 NSLocationWhenInUseUsageDescription = "سيتم استخدام موقعك لمزامنة الخلفية وللتنظيم والبحث في صورك.";
