--- a/Depo/Depo/App/Resources/en.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/en.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "To show your photos&videos in the applicati
 NSPhotoLibraryUsageDescription = "To show your photos&videos in the application and to back up them, lifebox needs your photo library access.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Your location will be used for background syncing and for organizing & searching your photos.";
 NSCameraUsageDescription = "To take pictures with your camera and to back up them to lifebox, your camera access permission is needed";
-NSContactsUsageDescription = "lifebox needs to access and upload your contacts to lifebox servers to backup and manage them.";
+NSContactsUsageDescription = "lifebox needs permission to access your contacts for providing phonebook suggestions during file sharing, and for contact back up feature to upload your contacts to lifebox servers to backup and manage them.";
 NSLocationWhenInUseUsageDescription = "Your location will be used for background syncing and for organizing & searching your photos.";
