--- a/Depo/Depo/App/Resources/fr.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "Pour afficher vos photos et vidéos dans l'
 NSPhotoLibraryUsageDescription = "Pour afficher vos photos et vidéos dans l'application et les sauvegarder, lifebox a besoin de votre bibliothèque de photos.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Votre emplacement sera utilisé pour la synchronisation en arrière-plan et pour organiser et rechercher vos photos.";
 NSCameraUsageDescription = "Pour prendre des photos avec votre appareil photo et les sauvegarder sur lifebox, une autorisation d'accès de votre appareil photo est nécessaire.";
-NSContactsUsageDescription = "lifebox doit pouvoir accéder à vos contacts et les télécharger sur des serveurs lifebox pour les sauvegarder et les gérer.";
+NSContactsUsageDescription = "Autorisez lifebox pour afficher les suggestions de répertoire lors du partage de fichiers et pour sauvegarder et pour gérer votre répertoire sur les serveurs lifebox.";
 NSLocationWhenInUseUsageDescription = "Votre emplacement sera utilisé pour la synchronisation en arrière-plan et pour organiser et rechercher vos photos.";
