--- a/Depo/Depo/App/Resources/ro.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "Pentru a afișa fotografiile și videoclipu
 NSPhotoLibraryUsageDescription = "Pentru a afișa fotografiile și videoclipurile în aplicație și pentru a le crea copii de rezervă, căsuța de salvare are nevoie de accesul la biblioteca foto.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Locația dvs. va fi utilizată pentru sincronizarea de fundal și pentru organizarea și căutarea fotografiilor.";
 NSCameraUsageDescription = "Pentru a face fotografii cu camera foto și pentru a le crea în siguranță în caseta de salvare, este necesară permisiunea dvs. pentru accesul camerei";
-NSContactsUsageDescription = "lifebox trebuie să acceseze și să încarce contactele dvs. pe serverele lifebox pentru a le face backup și a le gestiona.";
+NSContactsUsageDescription = "Pentru vizualizarea recomandărilor de agendă şi backup-ul respectiv gestionarea agentei tale pe serverele lifebox în timpul partajări fișier acordă permisiune lifebox-ului.";
 NSLocationWhenInUseUsageDescription = "Locația dvs. va fi utilizată pentru sincronizarea de fundal și pentru organizarea și căutarea fotografiilor.";
