--- a/Depo/Depo/App/Resources/tr.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "Fotoğraf ve videolarını uygulamada göst
 NSPhotoLibraryUsageDescription = "Fotoğraf ve videolarını uygulamada gösterebilmek ve yedekleyebilmek için fotoğraf galerine erişim iznin gerekiyor.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Fotoğraflarının arka planda yedeklenebilmesi ve konumununa göre organize edilip aranabilmesi için konum iznine ihtiyacımız var";
 NSCameraUsageDescription = "Cihaz kamerası ile fotoğraf çekmek ve çekilen fotoğrafları lifebox'a yedeklemek için cihaz kamerasına erişim iznin gerekiyor";
-NSContactsUsageDescription = "lifebox'un rehberine erişip yedeklemesi için kontaklarını lifebox sunucularına yüklemesi gerekir.";
+NSContactsUsageDescription = "Dosya paylaşımı sırasında rehber önerilerini görebilmek ve rehberini lifebox sunucularında yedekleyip yönetebilmek için lifebox'a izin ver.";
 NSLocationWhenInUseUsageDescription = "Fotoğraflarının arka planda yedeklenebilmesi ve konumununa göre organize edilip aranabilmesi için konum iznine ihtiyacımız var";
