--- a/Depo/Depo/App/Resources/uk.lproj/InfoPlist.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/InfoPlist.strings
@@ -4,5 +4,5 @@ NSPhotoLibraryAddUsageDescription = "Щоб показати свої фотог
 NSPhotoLibraryUsageDescription = "Щоб показати свої фотографії та відео в програмі та створити резервну копію їх, lifebox потребує доступу до бібліотеки фотографій.";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Ваше місце розташування буде використано для синхронізації у фоновому режимі та для організації та пошуку фотографій.";
 NSCameraUsageDescription = "Щоб фотографувати камерою та створити резервну копію їх у lifebox, потрібен дозвіл доступу до камери";
-NSContactsUsageDescription = "lifebox потребує доступу та завантаження контактів на сервери lifebox для їх резервного копіювання та управління.";
+NSContactsUsageDescription = "Дозволити lifebox переглядати пропоновані каталоги при спільному використанні файлів, а також створювати резервні копії та керувати вашим каталогом на серверах lifebox.";
 NSLocationWhenInUseUsageDescription = "Ваше місце розташування буде використано для синхронізації у фоновому режимі та для організації та пошуку фотографій.";
