--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1238,7 +1238,7 @@
 "campaign_detail_intro_noun_celebration" = "زود فرصتك  في ربح واحد من 20سامسونج كلاكسي نوت 10!";
 "campaign_detail_info_title" = "معلومات العرض";
 "campaign_detail_info_description" = "انتهى عرضنا الخاص بالهاتف.سوف تظهرنتائج السحب على حساباتنا بمواقع التواصل الاجتماعي يوم 20 من شهر فبراير.يمكنك الوصول إلى مجموع فرصك في السحب من الإعلان المتواجد أعلى. من أجل النتائج استمر في متابعة حساباتنا على مواقع التواصل الاجتماعي! ";
-"AccessibilityGiftButton" = "";
+"AccessibilityGiftButton" = "GiftBox";
 "landing_start_button" = "أبدأ";
 "landing_billo_title_0" = "عش,اجمع,تذكر";
 "landing_billo_subtitle_0" = "قم بالنسخ الاحتياطي لجميع ذكرياتك وملفاتك وجهات الاتصال إلى بيلو بأمان!";
