--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1256,20 +1256,20 @@
 "campaign_detail_info_description" = "PhotoPick Phone Campaign is over now. The results of the draw will be announced on February 20th from our social media accounts. You can see the total draw from above information. Don't forget to follow our social media accounts for results!";
 "AccessibilityGiftButton" = "Gift Box Button";
 "landing_start_button" = "GET STARTED";
-"landing_billo_title_0" = "Storage Made Simple";
-"landing_billo_subtitle_0" = "Store your memories and\nkeep them forever";
+"landing_billo_title_0" = "Live More. Store More.";
+"landing_billo_subtitle_0" = "While you live in the moment, your phone doesn’t have to.";
 "landing_billo_title_1" = "Auto-Sync";
 "landing_billo_subtitle_1" = "Sync your photos and videos automatically and access them wherever you are";
-"landing_billo_title_2" = "Face & Image Recognition";
-"landing_billo_subtitle_2" = "Find your memories easily with smart albums\nSearch by person, object or place";
-"landing_billo_title_3" = "Contact Sync";
-"landing_billo_subtitle_3" = "Back up your contacts, never lose them";
+"landing_billo_title_2" = "Your favourite memories at your fingertips";
+"landing_billo_subtitle_2" = "Easily search by person, place or object with Face & Image Recognition.";
+"landing_billo_title_3" = "Never Lose Your Contacts";
+"landing_billo_subtitle_3" = "Back up your contacts to keep them safe and sound.";
 "landing_billo_title_4" = "Free Up Space";
 "landing_billo_subtitle_4" = "Free up space from your device for new memories";
 "landing_billo_title_5" = "Automatic Stories";
 "landing_billo_subtitle_5" = "Relive your memories with stories, collages and animations automatically created just for you";
-"landing_billo_title_6" = "Social Media";
-"landing_billo_subtitle_6" = "Easily transfer your social media archives to Billo";
+"landing_billo_title_6" = "Where Storage Meets Social";
+"landing_billo_subtitle_6" = "Sync your socials for a lifetime of memories, share the best of you with PhotoPick.";
 "landing_billo_title_7" = "Photo Print";
 "landing_billo_subtitle_7" = "Decorate your living space with your memories";
 
