--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1534,20 +1534,20 @@ Please check I have understood the intended command here*/
 "campaign_detail_info_description" = "Notre campagne de téléphone est terminée. Les résultats de tirade au sort seront annoncés le 20 février à partir de nos comptes de médias sociaux. Vous pouvez accéder vos droits en total pour tirage au sort à partir des informations ci-dessus. Suivez nos comptes de médias sociaux pour voir les résultats!";
 "AccessibilityGiftButton" = "Bouton coffret cadeau";
 "landing_start_button" = "Commencer";
-"landing_billo_title_0" = "Stocker en toute simplicité";
-"landing_billo_subtitle_0" = "Ranger et garder vos souvenirs pour toujours ";
+"landing_billo_title_0" = "Plus d’expériences. Plus de stockage.";
+"landing_billo_subtitle_0" = "Pendant que vous vivez l'instant présent, votre téléphone n'a rien à faire.";
 "landing_billo_title_1" = "Synchronisation automatique";
 "landing_billo_subtitle_1" = "Automatiser la synchronisation de vos photos et vidéos et accédez-y de partout !";
-"landing_billo_title_2" = "Reconnaissance du visage / image";
-"landing_billo_subtitle_2" = "Trouver facilement vos souvenirs avec des albums intelligents! Recherchez par personne, objet ou lieu.";
-"landing_billo_title_3" = "Synchoniser les contacts";
-"landing_billo_subtitle_3" = "Sauvegardez vos contacts, ne les perdez jamais !";
+"landing_billo_title_2" = "Vos souvenirs préférés à portée de main";
+"landing_billo_subtitle_2" = "Recherche simplifiée par personne, lieu ou objet grâce à la reconnaissance des visages et des images.";
+"landing_billo_title_3" = "Ne perdez jamais vos contacts";
+"landing_billo_subtitle_3" = "Sauvegardez vos contacts afin de les garder en sécurité.";
 "landing_billo_title_4" = "Libérer de l'espace";
 "landing_billo_subtitle_4" = "Libérez de l'espace sur votre téléphone pour de nouveaux souvenirs !";
 "landing_billo_title_5" = "Stories automatiques";
 "landing_billo_subtitle_5" = "Vivez vos souvenirs avec des stories automatisées créées pour vous";
-"landing_billo_title_6" = "Réseaux sociaux";
-"landing_billo_subtitle_6" = "Transférer facillement toutes vos archives de réseaux sociaux vers Billo!";
+"landing_billo_title_6" = "Là où le stockage rencontre le social";
+"landing_billo_subtitle_6" = "Synchronisez vos réseaux sociaux pour une vie entière de souvenirs, partagez le meilleur de vous-même grâce à PhotoPick.";
 "landing_billo_title_7" = "Imprimer";
 "landing_billo_subtitle_7" = "Décorez votre vie avec vos souvenirs !";
 
