--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -1876,3 +1876,4 @@
 "tabbar_item_shared_files" = "My Sharings";
 "tabbar_item_shared_area" = "Shared Area";
 "tabbar_item_settings" = "Settings";
+"private_share_max_number_of_item_limit_exceeded" = "private_share_max_number_of_item_limit_exceeded";
