--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1823,3 +1823,4 @@
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "Номер GSM або електронна пошта перевищує ліміт символів.";
 "private_share_start_max_number_of_users" = "Спільне використання може здійснюватися не більше ніж з %d людиною.";
+"private_share_max_number_of_item_limit_exceeded" = "Перевищено максимальний ліміт обміну файлами.";
