--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1821,3 +1821,4 @@
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "E-Mail oder Mobilnummer übersteigt die Anzahl der zulässigen Charakter.";
 "private_share_start_max_number_of_users" = "Es kann maximal mit %d Personen geteilt werden.";
+"private_share_max_number_of_item_limit_exceeded" = "Maximale Grenze der Dateifreigabe überschritten.";
