--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1863,3 +1863,4 @@
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "El número de correo electrónico o GSM excede el límite de caracteres.";
 "private_share_start_max_number_of_users" = "Se puede compartir con un  máximo de %d persona.";
+"private_share_max_number_of_item_limit_exceeded" = "Maximale Grenze der Dateifreigabe überschritten.";
