--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -1552,7 +1552,7 @@ Please check I have understood the intended command here*/
 "landing_billo_subtitle_7" = "Décorez votre vie avec vos souvenirs !";
 
 /*introduce billo*/
-"billo_intro_title" = "Vivre, Collecter, Se souvenir";
+"billo_intro_title" = "Vivre, collectionner, se rappeler";
 "billo_intro_subtitle" = "Sauvegardez tous vous souvenirs, vos contacts et vos fichiers en toute sécurité dans Billo. Accédez à votre contenu à tout moment depuis n’importe quel appareil.";
 "billo_intro_create_account_button" = "Créer un compte";
 "billo_intro_login_button" = "J'ai un compte, me connecter";
@@ -2129,3 +2129,4 @@ Please check I have understood the intended command here*/
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "Le numéro de courrier électronique ou de GSM dépasse la limite de caractères.";
 "private_share_start_max_number_of_users" = "Le partage peut être effectué avec un maximum de %d personnes.";
+"private_share_max_number_of_item_limit_exceeded" = "Il a été dépassée la limite maximale de partage de fichier.";
