--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1835,3 +1835,4 @@
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "В электронной почте или номере GSM превышен лимит количества символов.";
 "private_share_start_max_number_of_users" = "Публикации общего доступа могут быть совершены максимум с %d людьми.";
+"private_share_max_number_of_item_limit_exceeded" = "Превышен максимальный лимит обмена файлами.";
