--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1864,3 +1864,4 @@
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "Numri i postës elektronike ose GSM tejkalon limitin e karakterit.";
 "private_share_start_max_number_of_users" = "Ndarja mund të bëhet me %d persona maksimalisht.";
+"private_share_max_number_of_item_limit_exceeded" = "Kufiri maksimal i ndarjes së skedarit është tejkaluar.";
