--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1395,7 +1395,7 @@
 "expand_my_storage" = "Saklama alanımı yükselt";
 "delete_files" = "İçeriklerimi sil";
 "LifeboxLargePopUpSubTitleBeetween80And99" = "Paket yükseltme seçeneklerine göz at!";
-"LifeboxLargePopUpSubTitle100Premium" = "lifebox alanını doldurdun. Anılarını saklamaya devam etmek için yeni bir paket alabilir veya içeriklerini sahip olduğun alana sığacak şekilde azaltabilirsin.";
+"LifeboxLargePopUpSubTitle100Premium" = "lifebox alanını doldurdun. Anılarını saklamaya devam etmek için hemen yeni bir paket alabilir veya içeriklerini sahip olduğun alana sığacak şekilde azaltabilirsin.";
 "LifeboxLargePopUpSubTitle100Freemium" = "lifebox saklama alanını doldurdun. Yeni bir paket satın almazsan veya içeriklerini mevcut saklama alanına sığacak şekilde azaltmazsan, tüm içeriklerin silinecek.";
 "empty_trash_bin" = "Çöp Kutusunu Temizle";
 "confirm_dialog_header_empty_trashbin" = "Çöp Kutusunu Temizle";
@@ -1839,3 +1839,4 @@
 "private_share_long_message" = "";
 "private_share_long_emailmsisdn" = "E-Posta veya GSM numarası karakter limitini aşıyor.";
 "private_share_start_max_number_of_users" = "Maksimum %d kişi ile paylaşım yapılabilir.";
+"private_share_max_number_of_item_limit_exceeded" = "Maksimum dosya paylaşım sınırı aşıldı.";
