--- a/Depo/LifeBox_Business/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/de.lproj/OurLocalizable.strings
@@ -1822,9 +1822,10 @@
 "private_share_long_emailmsisdn" = "E-Mail oder Mobilnummer übersteigt die Anzahl der zulässigen Charakter.";
 "private_share_start_max_number_of_users" = "Es kann maximal mit %d Personen geteilt werden.";
 
-"tabbar_item_my_disk" = "My Disk";
-"tabbar_item_shared_files" = "My Sharings";
-"tabbar_item_shared_area" = "Shared Area";
+"business_app_tabbar_mydisk" = "My Disk";
+"business_app_tabbar_mysharings" = "My Sharings";
+"business_app_tabbar_sharedarea" = "Shared Area";
+
 "tabbar_item_settings" = "Settings";
 
 "business_app_upload_403" = "You are not authorized to upload here";
