--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -897,8 +897,8 @@
 "terms_and_use_etk_link_commercial_email_messages" = "commercial e-mail messages";
 "commercial_email_messages" = "WRITTEN CONSENT FOR COMMERCIAL E-MAIL MESSAGES\n\nI hereby agree that I give my consent to Turkcell and its Group Companies for sending commercial e-mail messages (messages containing data, voice and video which are sent for commercial purposes and transmitted electronically by using means such as telephone, call center, fax transmission, autodialing device, smart sound recorder, electronic mail, short message system) to me through my contact details which I provided when subscribing to lifebox application or which is already held by Turkcell and its Group Companies,  for the purpose of advertising and marketing various new products & services offered as well as announcing general/special opportunities provided by Turkcell and its Group Companies and/or third party entities they cooperate with, pursuant to the Law No.6563 on Regulation of Electronic Commerce (“the Law”) as well as the Regulations on Commercial Communication and Commercial Electronic Mail Messages (“the Regulations”) on perpetual basis until I exercise my right to refuse such messages even if my subscription agreement for aforesaid application expires.  \n\nCommercial e-mail messages sent by the operators, which are subject to the Electronic Communication Law No.5809, to their subscribers and users exclusively for advertising and marketing their own products & services or introducing their business are exempted pursuant to the Regulations. Therefore, I hereby agree that the consent, which I gave above, is independent of and apart from the consent I have given to the operator to which I am a subscriber/user in connection with advertisement of its products & services and that such operator shall be entitled to send commercial e-mail messages for the purposes such as advertising, marketing its own products & services within the scope of consent I have given to the operator to which I am a subscriber even if I revoke the consent given under this document by exercising my right to refuse such messages pursuant to the Law and the Regulations and that I am aware of my entitlement to refuse the commercial e-mail messages of my operator as well.";
 "NSLocationAlwaysUsageDescription" = "Your location will be used for background syncing and for organizing & searching your photos.";
-"NSPhotoLibraryAddUsageDescription" = "To show your photos&videos in the application and to back up them, lifebox needs your photo library access.";
-"NSPhotoLibraryUsageDescription" = "To show your photos&videos in the application and to back up them, lifebox needs your photo library access.";
+"NSPhotoLibraryAddUsageDescription" = "Lifebox needs your photo library access in order to be able to upload them to the app and download your photos in application to the device gallery";
+"NSPhotoLibraryUsageDescription" = "Lifebox needs your photo library access in order to be able to upload them to the app and download your photos in application to the device gallery";
 
 /*Usage Info*/
 "package_space_details" = "%1$@ / %2$@ internet used (only for lifebox usage)";
@@ -1900,3 +1900,12 @@
  
 "business_app_delete_confirm_popup_title" = "Are you sure to delete?";
 "business_app_delete_confirm_popup_detail" = "Deleted files will be sent to Trash Bin";
+
+"business_app_notification_permission" = "Notifications may include alerts, sounds and icon badges. These can be configured in Settings";
+
+"business_app_gallery_permission" = "Lifebox needs your photo library access in order to be able to upload them to the app and download your photos in application to the device gallery";
+
+"business_app_gallery_permission_not_provided_popup_title" = "Photo Library Access Permission";
+"business_app_gallery_permission_not_provided_popup_description" = " We need your photo library access permission for this action. Please check you app settings";
+"business_app_gallery_permission_not_provided_popup_settings_accept" = "Settings";
+"business_app_gallery_permission_not_provided_popup_settings_reject" = "No";
