updated logics with selection mode actions based on bitmask parameter. added separate 'private share' and 'send a copy'

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -129,6 +129,7 @@
 "Move" = "Move";
 "Edit" = "Edit";
 "Share" = "Share";
+"Send a Copy" = "Send a Copy";
 "Wait for a Wi-Fi Connection" = "Waiting for a Wi-Fi connection";
 
 /*I cant understand*/
