--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -1945,7 +1945,7 @@
 "business_app_private_share_share_duration_no_duration" = "No duration";
 "business_app_private_share_share_duration_1_hour" = "1 hour";
 "business_app_private_share_share_duration_1_day" = "1 day";
-"business_app_private_share_share_duration_1_week" = "1 week";
+"business_app_private_share_share_duratibusiness_app_access_page_titleon_1_week" = "1 week";
 "business_app_private_share_share_duration_1_month" = "1 month";
 "business_app_private_share_share_duration_1_year" = "1 year";
 "business_app_private_share_start" = "Share";
@@ -1976,3 +1976,9 @@
 "business_app_whohasaccess_role_editor" = "Editor";
 "business_app_whohasaccess_role_viewer" = "Viewer";
 "business_app_whohasaccess_role_varies" = "Varies";
+
+"business_app_access_page_title" = "Access";
+"business_app_access_page_role_editor" = "Editor";
+"business_app_access_page_role_viewer" = "Viewer";
+"business_app_access_page_role_varies" = "Varies";
+"business_app_access_page_expire_date" = "Expires on: %@";
