added required colors + images + defined new localized text constant

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -1982,3 +1982,4 @@
 "business_app_access_page_role_viewer" = "Viewer";
 "business_app_access_page_role_varies" = "Varies";
 "business_app_access_page_expire_date" = "Expires on: %@";
+"business_app_access_page_from_folder" = "From %@ folder";
