upload individual progress

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -1970,3 +1970,5 @@
 "business_app_info_page_role_editor" = "Editor";
 "business_app_info_page_role_viewer" = "Viewer";
 "business_app_info_page_role_varies" = "Varies";
+
+"business_app_upload_bar_uploading_text" = "Uploading";
