--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -1976,3 +1976,4 @@
 "business_app_whohasaccess_role_editor" = "Editor";
 "business_app_whohasaccess_role_viewer" = "Viewer";
 "business_app_whohasaccess_role_varies" = "Varies";
+"uploadVideoToReadOnlyAlbumError" =  "uploadVideoToReadOnlyAlbumError";
