--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -548,7 +548,7 @@
 "Suggestions" = "Suggestions";
 "Recent Searches" = "Recent Searches";
 "Lifebox can sync your files automatically." = "lifebox can sync your files, photos and videos automatically. \n\nTo enable background sync of your photos and videos, please make sure that your location permission is set to \"ALWAYS\" by going to “Device Settings > lifebox > Location\" menu.";
-"Get Started" = "Get Started";
+"Start Using" = "Start Using";
 "I have read and accepted terms of use" = "I have read and accepted terms of use";
 "Welcome to Lifebox!" = "Welcome to lifebox!";
 "You need to confirm the User Agreement to continue." = "You need to confirm the User Agreement to continue.";
@@ -1656,6 +1656,7 @@
 "contact_phase2_result_delete_duplicates_nav_bar_title" = "Delete Duplicates";
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Delete Contacts";
 "eula_title" = "Terms of Use";
+"eula_title_new" = "Welcome to Lifebox";
 "photo_video_empty_no_unsync_photos_title" = "All your files are synced!";
 "photo_edit_navbar_save" = "Save";
 "photo_edit_save_as_copy" = "Save as copy";
