added logs for fastlogin actions

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2006,7 +2006,7 @@
 
 "business_app_FL_error_popup_title" = "Authentication Failed";
 "business_app_fast_login_pool_user_popup" = "Please get in touch with your company to get access to the app";
-"business_app_fast_login_authentication_fail_popup" = "Authentication Failure in Fast Login";
+"business_app_fast_login_authentication_fail_popup" = "Authentication Failure";
 "business_app_FL_error_session_timeout" = "Your Fast Login session is expired. Please try again later.";
 "business_app_FL_error_not_logintologinSDK" = "Authentication Error in Fast Login";
 "business_app_FL_else_error" = "Temporary error occured in Fast Login. Please try again later.";
