COF-1139 Added new tag

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -541,6 +541,7 @@
 "You don’t have any stories  on your Lifebox yet." = "You don’t have any stories on your lifebox yet.";
 "Start creating stories" = "Start creating stories";
 "Help and Support" = "Help and Support";
+"business_app_faq_page_title" = "FAQ";
 "Album is Empty" = "Album is empty";
 "You don’t have any files on your Lifebox yet." = "You don’t have any files on your lifebox yet.";
 "You don’t have any favorited files on your Lifebox yet." = "You don’t have any favorite files on your lifebox yet.";
