--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -550,6 +550,8 @@
 "Lifebox can sync your files automatically." = "lifebox can sync your files, photos and videos automatically. \n\nTo enable background sync of your photos and videos, please make sure that your location permission is set to \"ALWAYS\" by going to “Device Settings > lifebox > Location\" menu.";
 "Start Using" = "Start Using";
 "I have read and accepted terms of use" = "I have read and accepted terms of use";
+"business_app_privacy_policy_start" = "Start Using";
+"business_app_eula_checkbox" = "I have read and accepted terms of use";
 "Welcome to Lifebox!" = "Welcome to lifebox!";
 "You need to confirm the User Agreement to continue." = "You need to confirm the User Agreement to continue.";
 "PhotosAndViedos" = "Photos and Videos";
@@ -1000,9 +1002,11 @@
 "face_tags_description_premium" = "When you enable Face&Image Recognition feature, the photos you have uploaded will be grouped according to the faces and objects. If the location service option is turned on, the photos will also be grouped according to the location information. We will be able to create automated stories for you based on this grouping.";
 "terms_of_use" = "Terms of Use";
 "privacy_policy" = "For detailed information about your personal data that we collect through lifebox, please read our Privacy Policy";
+"business_app_eula_privacy_policy_textbox" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus, ipsum sit amet aliquam iaculis, lectus enim suscipit purus, fringilla dapibus risus lorem vehicula quam Privacy Policy";
 "face_tags_description_standart" = "When you enable Face&Image Recognition feature, the photos you have uploaded will be grouped according to the faces and objects. If the location service option is turned on, the photos will also be grouped according to the location information. We will be able to create automated stories for you based on this grouping.";
 "terms_and_use_introduction_checkbox" = "I have read and accepted Terms of Use.";
 "privacy_policy_condition" = "Privacy Policy";
+"business_app_privacy_policy_page_title" = "Privacy Policy";
 "photo_pick_description" = "If you enable the button and connect your Instagram account, we'll be able to provide a personalized, enhanced experience by performing custom analysis on each new PhotoPick analysis.";
 
 /*Permission screen in Settings*/
@@ -1657,6 +1661,7 @@
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Delete Contacts";
 "eula_title" = "Terms of Use";
 "eula_title_new" = "Welcome to Lifebox";
+"business_app_eula_page_title" = "Terms of Use";
 "photo_video_empty_no_unsync_photos_title" = "All your files are synced!";
 "photo_edit_navbar_save" = "Save";
 "photo_edit_save_as_copy" = "Save as copy";
