COF-1232 Added new tags

--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2027,3 +2027,8 @@
 "business_app_settings_contactus" = "Contact Us";
 "business_app_settings_deletedfiles" = "Trash Bin";
 "business_app_settings_logout" = "Log out";
+
+/*storage limit*/
+"business_app_quota_full_upload_pop_up_title" = "You have reached your Lifebox Business Storage Limit";
+"business_app_quota_full_upload_pop_up_description" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.";
+"business_app_quota_full_upload_pop_up_button" = "Manage Files";
