--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2097,3 +2097,7 @@
 "business_app_trash_bin_empty_trash_confirm_YES_button" = "Empty Trash Bin";
 "business_app_trash_bin_empty_trash_confirm_NO_button" = "Cancel";
 "business_app_trash_bin_empty_trash_success" = "All items are permanantly deleted";
+
+"business_app_root_device_popup_title" = "This device is rooted";
+"business_app_root_device_popup_description" = "You can not use this app with rooted device due to security reasons";
+"business_app_root_device_popup_button" = "Close the app";
