--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2014,6 +2014,7 @@
 "business_app_agreement_privacy_policy" = "Privacy Policy";
 "business_app_eula_privacy_policy_textbox" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus, ipsum sit amet aliquam iaculis, lectus enim suscipit purus, fringilla dapibus risus lorem vehicula quam Privacy Policy";
 "business_app_privacy_policy_page_title" = "Privacy Policy";
+"business_app_privacy_policy_condition" = "Privacy Policy";
 "eula_title_new" = "Welcome to Lifebox";
 "business_app_eula_page_title" = "Terms of Use";
 "business_app_settings_page_title" = "Settings";
