--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2101,3 +2101,6 @@
 "business_app_root_device_popup_title" = "This device is rooted";
 "business_app_root_device_popup_description" = "You can not use this app with rooted device due to security reasons";
 "business_app_root_device_popup_button" = "Close the app";
+
+
+"business_app_manual_picker_selected_counter" = "%d Selected";
