--- a/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/LifeBox_Business/App/Resources/en.lproj/OurLocalizable.strings
@@ -2051,6 +2051,9 @@
 "business_app_contact_us_subject_3" = "Subject_3";
 "business_app_contact_us_subject_4" = "Subject_4";
 "business_app_contact_us_subject_5" = "Subject_5";
+"business_app_contact_us_subject_6" = "Subject_6";
+"business_app_contact_us_subject_7" = "Subject_7";
+"business_app_contact_us_subject_8" = "Subject_8";
 "business_app_contact_us_email_body_unlimited" = "Unlimited";
 "business_app_contact_us_email_body" = "\ne-mail: %@\nApplication Version: %@\nDevice Name: %@\nDevice OS: %@\nLanguage: %@\nNetwork Status: %@\nTotal Storage: %@\nUsed Storage: %@\nSubject: %@";
 
